# instaui-examples

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: deploy-pages.yml
src/: main.py  page_loader.py  page_state.py  static_website.py
src/echarts/: graphics_examples.py  i18n.py  main.py  utils.py
src/echarts/components/: __init__.py  install.py  lang_select.py  navigation.py
src/echarts/state/: __init__.py  lang_state.py
src/gallery/etch_sketch/: main.py
src/index/: main.py
src/instaui/: main.py  views.py
src/instaui/locale/: babel.cfg
src/locale/: babel.cfg
src/locale/messages/en_US/LC_MESSAGES/: messages.po
src/pages/echarts_page/: graphics_examples.py  main.py
src/pages/gallery_page/etch_sketch/: main.py
src/pages/gallery_page/todo_list/: components.py  main.py  state.py  utils.py
src/pages/index_page/: main.py
src/pages/instaui_page/: main.py  views.py
src/pages/shiki_page/: main.py  shiki_examples.py
src/pages/tdesign_page/: main.py  views.py
src/shared/: cmd.py  css.py  dependency_view.py  example_extractor.py  i18n.py  lang_select.py  link.py  main_view.py  navigation.py  page_header.py  website_utils.py
src/shared/css_file/: index.css
src/shiki/: main.py  shiki_examples.py
src/systems/: code_system.py
src/tdesign/: main.py  views.py
src/tdesign_table/: main.py  main_cell_slot.py
src/todo_list/: components.py  main.py  snippets.py  utils.py
website/: index.html  instaui-echarts.html  instaui-shiki.html
website/gallery/: etch_sketch.html
(+11 files in other folders)
