[project]
name = "instaui-examples"
version = "0.1.0"
description = "instaui examples"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "instaui-echarts>=0.4.2",
    "instaui-shiki",
    "instaui-tdesign[all]",
    "instaui[web]>=0.7.1",
    "pandas>=2.3.2",
    "polars>=1.34.0",
]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "polib>=1.2.0",
]
lint = [
    "ruff==0.12.2",
]
